--- a/emailboiler.html
+++ b/emailboiler.html
@@ -74,7 +74,7 @@
                     <td height="20">&nbsp;</td>
                   </tr>
                 </table>
-              	$1<!-- ####### INSERT BLOCKS HERE #######-->
+              	<!-- ####### INSERT BLOCKS HERE #######-->
                 <table width="560" border="0" cellspacing="0" cellpadding="0" align="center" class="fit-width">
                   <tr>
                     <td height="20">&nbsp;</td>
@@ -89,10 +89,7 @@
           <table width="600" border="0" align="center" cellpadding="0" cellspacing="0" class="fit-width">
             <tr>
               <td style="padding:25px;font-size:10px; font-family:Arial, Helvetica, sans-serif; color:#666666; line-height:17px; background:#EEEEEE" class="smallparagraph">
-             INSERT CORRECT FOOTER TEXT HERE<br />
-<br />
-
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
