--- a/emailboiler.html
+++ b/emailboiler.html
@@ -40,8 +40,10 @@
       }
     </style>
   </head>
-  <body bgcolor="#EEEEEE">
-    <!-- Page container -->
+<!--[if !mso]><!-->
+<body bgcolor="#EEEEEE">
+<!--<![endif]-->
+  <!-- Page container -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#EEEEEE">
       <tr>
         <td align="center" class="float-left">
